<resources>
    <string name="app_name">AlcoHelper</string>
    <string name="title_activity_maps">Map</string>
    <string name="gps_signal">Waiting for signal from GPS</string>
    <string name="entry_point">Entry Point</string>
    <string name="bring_me_back">Bring me back</string>
    <string name="direction_api_key">AIzaSyAnKE2p8XzDQN-GvCvRIiAR-o-wfmH2MOY</string>
    <string name="menu_call_taxi">Call taxi</string>
    <string name="menu_entry_point_address">Entry point</string>
    <string name="menu_edit_taxi_number">Taxi number</string>
    <string name="drink">Drink</string>
    <string name="ml">ml </string>
    <string name="booz">Booz</string>
    <string name="measure_alcohol">Enter measure of alcohol</string>

    <string-array name="drinklist">
        <item>Beer</item>
        <item>Vine</item>
        <item>Rum</item>
    </string-array>

</resources>
