<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">
    <item
        android:id="@+id/option1"
        android:icon="@android:drawable/stat_sys_phone_call"
        android:title="@string/menu_call_taxi"/>
    <item
        android:id="@+id/option2"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/menu_entry_point_address"/>
    <item
        android:id="@+id/option3"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menu_edit_taxi_number"/>
    <item
        android:id="@+id/option4"
        android:icon="@android:drawable/btn_plus"
        android:title="Alco counter"/>
</menu>